src/test/deca/syntax/invalid/improvided/bloc_not_opened.deca
// Description :
//	Bloc not opened
// Resultats :
// 	Ligne 6 : 

	print("not opened ");
} 
